# Openflow-OPCUA-Ingest-Processors

./: README.md
get_opc_data/: README.MD  pyproject.toml
get_opc_data/src/: __init__.py  get_opc_data.py  get_opc_node_list.py
get_opc_node_list/: README.md  pyproject.toml
get_opc_node_list/src/: __init__.py
